<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Postnummeruppror</string>
    <string name="action_about">Om</string>
    <string name="provider">Datakälla:</string>
    <string name="altitude">Höjd över havet:</string>
    <string name="accuracy">Felmarginal:</string>
    <string name="latitude">Latitud:</string>
    <string name="longitude">Longitud:</string>
    <string name="send_postnummer">Registrera</string>
    <string name="not_applicable">Väntar på data…</string>
    <string name="location_header">Information om senast kända position:</string>
    <string name="timestamp">Tidsstämpel:</string>
    <string name="server_number_of_accounts">Antal användare:</string>
    <string name="server_number_of_location_samples">Antal rapporter:</string>
    <string name="server_number_of_location_samples_100_meters">…inom 100 meter:</string>
    <string name="server_number_of_location_samples_500_meters">…inom 500 meter:</string>
    <string name="update_server_statitics">Uppdatera</string>
    <string name="location_fix_label">Väntar på position…\nÄr du inomhus? Gå till ett fönster!\nTack för din tålmodighet!</string>
    <string name="email_address_hint">E-postadress</string>
    <string name="account_identity">Kontoidentitiet</string>
    <string name="account_setup_submit_account">Skicka</string>
    <string name="account_cc_zero">Postnummerdata jag rapporterar in kommer från icke upphovsrättligt skyddade källor och jag delar med av dessa till allmänheten i enighet med licensen <a href="http://creativecommons.org/publicdomain/zero/1.0/">CC0 1.0</a>, dvs jag ställer inga krav på källhänvisning, ekonomisk ersättning eller hur datat används.</string>
    <string name="action_account">Kontodetaljer</string>
    <string name="action_setting">Inställningar</string>
    <string name="title_activity_account">Kontodetaljer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_statistics">Statistik</string>
    <string name="action_statistics">Statistik</string>
    <string name="title_activity_about">Om</string>
    <string name="about">PC LOAD LETTER</string>
    <string name="postal_code_hint">Postnummer</string>
    <string name="postal_town_hint">Postort</string>
    <string name="house_number_hint">Husnummer</string>
    <string name="street_name_hint">Gatunamn</string>
    <string name="data_entry_header">Fyll i så mycket av postadressen du känner till. Om du rapporterar positionering är det även intressant med enstaka gatunamn, husnummer, postorter, etc.</string>
    <string name="server_statistics_number_of_postal_towns">Antal unika postorter (av ca 1800):</string>
    <string name="server_statistics_number_of_postal_codes">Antal unika postnummer:</string>
    <string name="account_header">Väljer du att utelämna någon av uppgifterna kan den postnummerdata du rapporterar in tyvärr inte användas. Du kan ändå använda applikationen och senare välja att fylla i dessa fält. Den data som tillgängliggörs publikt kommer alltid vara anonymiserad.</string>
    <string name="location_accuracy_value">Positioneringens noggrannhet:</string>
    <string name="no_location">positionerar…</string>
    <string name="i_stand_still">Jag stannar kvar på postadressen tills dess att jag trycker på "Registrera".</string>
    <string name="house_name_hint">Uppgång</string>
    <string name="first_name_hint">Förnamn</string>
    <string name="last_name_hint">Efternamn</string>
    <string name="version">Versionsnummer</string>
    <string name="about_text">Visste du att information om adresser och postnummer inte finns fritt tillgängliga? Det ställer till det för de som behöver korrekt adressinformation för sina tjänster men inte kan betala 40 000 kronor om året för att få tillgång till informationen.
\n\nVi behöver din hjälp! Genom att använda Insamlingsappen kan du bidra med information om postnummer, adresser och deras platser. Samtidigt bidrar du till att visa för politker och andra att affärsmodellen för postnummer är förlegad och behöver ändras. I andra länder har det visat sig att nyttan för samhället blir mycket större med fri adressinformation. Tillsammans kan vi bygga ett nytt postnummersystem.
\n\n\nHur du använder Insamlingsappen
\n\nNär du befinner dig vid en adress kan du starta appen, fylla i information om vilken adress och postnummer du befinner dig vid. Informationen sparas i vår databas och är fritt tillgänglig för alla. Det gör inget om du inte kan den fullständiga postadressen, vi har nästan lika mycket nytta av ett ensamt husnummer, gatunamn, postort, osv. Varje bit information är värdefull.
\n\n\nHar du tillgång till koordinatsatta adressuppgifter?
\n\nKontakta oss gärna om du har tillgång till ett register med koordinatsatta postadresser så importerar vi dem till applikationen.
\n\n<a href="postnummeruppror@gmail.com">postnummeruppror@gmail.com</a></string>
    <string name="title_activity_location_reports">Dina rapporter</string>
    <string name="action_location_reports">Dina rapporter</string>
    <string name="location_reports_header_postal_town">Postort</string>
    <string name="location_reports_header_postal_code">Postnummer</string>
    <string name="location_reports_header_street_address">Gata</string>
    <string name="location_reports_header_house_number">Husnummer</string>
    <string name="location_reports_header_house_name">Uppgång</string>
    <string name="title_activity_help">Hjälp</string>
  <string name="help_text">Var kan man hitta postnummer?
\n\nBe om kvitto när du köper något, där står nästan alltid postnummret. Men kontrollera så det är adressen där du befinner dig i stället för exempelvis adressen till kedjans huvudkontor eller liknande.
\n\nFråga dem som bor där du befinner dig.
\n\nHar du fler tips? Hör av dig så listar vi dem här!
\n<a href="mailto:postnummeruppror@gmail.com">postnummeruppror@gmail.com</a>.
\n\n\nVad är skillnaden på de olika positioneringsvalen?
\n\nVi ber dig välja positioneringsmodell baserat på ditt beteende i stället för att beskriva den bakomliggande tekniken då det senare helt enkelt tar för mycket plats att skriva ner.
\n\nDet första valet, \'Jag befinner mig på postadressen tills dess jag registerar den\' betyder att applikationen väljer den positionering med bäst noggrannhet. Tittar du på "positioneringsen noggrannhet" så kommer du märka att den aldrig blir högre, däremot kan den bli lägre. Detta val förutsätter att du inte rör på dig från den postadress du registerar. Om du är inomhus är det helt OK att du är går och ställer dig vid ett fönster för att få en bättre positioneringsfix så länge du fortfarande befinner dig på samma postadress.
\n\nDet andra valet, \'Jag befinner mig på postadressen nu men går vidare innan den registrerats\' betyder att applikationen väljer den första positioneringen som hittas efter att du väljer denna metod. Detta är vettigt om du exempelvis är ute och går och passar på att registrera husnummer men inte vill stanna till hela tiden. Positioneringen blir generellt sett sämre, men har du GPS påslaget bör det inte vara något problem.
\n\nDet tredje valet, \'Använd inte min position, den har inget att göra med postadressen jag registerar\' betyder att applikationen frånser din position och enbart registrerar själva postadressen. Detta kan du göra om du känner till att en postadress existerar men inte befinner dig i närheten.
\nVi är absolut intresserade av att samla på oss exempelvis vilka postnummer som är kopplat med en viss postort, vilka gatunamn som existerar i ett visst postnummer, osv!
</string>

  <string name="action_help">Hjälp</string>
  <string name="location_radio_header">Hur skall din nuvarande position användas?</string>
  <string name="location_radio_i_stand_still">Jag befinner mig på postadressen tills dess att jag registrerat den.</string>
  <string name="location_radio_i_move">Jag befinner mig på postadressen nu men går vidare innan den registrerats.</string>
  <string name="location_radio_im_not_there">Använd inte min position, den har inget att göra med postadressen jag registerar.</string>

</resources>
