<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".InsamlingActivity">
  <item
    android:id="@+id/action_about"
    android:title="@string/action_about"
    android:orderInCategory="100"
    app:showAsAction="never" />
  <item
    android:id="@+id/action_statistics"
    android:title="@string/action_statistics"
    android:orderInCategory="100"
    app:showAsAction="never" />
  <item
    android:id="@+id/action_settings"
    android:title="@string/action_setting"
    android:orderInCategory="100"
    android:visible="false"
    app:showAsAction="never" />
  <item
    android:id="@+id/action_account"
    android:title="@string/action_account"
    android:orderInCategory="100"
    app:showAsAction="never" />
</menu>
