<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="nu.postnummeruppror.insamlingsappen.LocationSamplesActivity">


  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
      android:id="@+id/location_reports_table"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <TableRow>

        <TextView
          android:text="@string/location_reports_header_postal_town"
          android:padding="3dip" />

        <TextView
          android:text="@string/location_reports_header_postal_code"
          android:padding="3dip" />

        <TextView
          android:text="@string/location_reports_header_street_address"
          android:padding="3dip" />

        <TextView
          android:text="@string/location_reports_header_house_number"
          android:padding="3dip" />

        <TextView
          android:text="@string/location_reports_header_house_name"
          android:padding="3dip" />


      </TableRow>

    </TableLayout>


  </ScrollView>


</RelativeLayout>
