<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  tools:context=".Insamling">

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
      android:id="@+id/provider"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/provider" />

    <TextView
      android:id="@+id/altitude"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/altitude" />

    <TextView
      android:id="@+id/accuracy"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/accuracy" />

    <TextView
      android:id="@+id/latitude"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/latitude" />

    <TextView
      android:id="@+id/longitude"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/longitude" />

    <View
      android:layout_width="fill_parent"
      android:layout_height="2dp"
      android:background="#ffffff" />


    <EditText
      android:id="@+id/postal_code"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:hint="@string/postnummer_hint"
      android:inputType="number" />

    <Button
      android:id="@+id/submit_postal_code"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:hint="@string/send_postnummer_hint"
      android:text="@string/send_postnummer" />

  </LinearLayout>

</RelativeLayout>
