<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="nu.postnummeruppror.insamlingsappen.AccountActivity">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
      android:id="@+id/account_setup_view"
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="vertical"
      >

      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_header"/>

      <View
        android:layout_width="16dp"
        android:layout_height="16dp"/>

      <EditText
        android:id="@+id/account_setup_email_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address_hint"
        android:inputType="textEmailAddress"/>

      <EditText
        android:id="@+id/account_setup_fist_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name_hint"
        android:inputType="textCapWords"/>

      <EditText
        android:id="@+id/account_setup_last_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_hint"
        android:inputType="textCapWords"/>

      <View
        android:layout_width="16dp"
        android:layout_height="16dp"/>

      <CheckBox
        android:id="@+id/account_setup_cc_zero"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_cc_zero"/>

      <View
        android:layout_width="fill_parent"
        android:layout_height="16dp"/>

      <Button
        android:id="@+id/account_setup_submit_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_setup_submit_account"/>


    </LinearLayout>

  </ScrollView>

</RelativeLayout>
