<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="nu.postnummeruppror.insamlingsappen.StatisticsActivity">

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="visible">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/server_number_of_accounts"/>

      <TextView
        android:id="@+id/server_statistics_number_of_accounts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_applicable"/>

    </LinearLayout>



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/server_statistics_number_of_postal_codes"/>

      <TextView
        android:id="@+id/server_statistics_number_of_postal_codes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_applicable"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/server_statistics_number_of_postal_towns"/>

      <TextView
        android:id="@+id/server_statistics_number_of_postal_towns"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_applicable"/>

    </LinearLayout>




    <!-- antal rapporter -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/server_number_of_location_samples"/>

      <TextView
        android:id="@+id/server_statistics_number_of_location_samples"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_applicable"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/server_number_of_location_samples_100_meters"/>

      <TextView
        android:id="@+id/server_number_of_location_samples_100_meters"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_applicable"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/server_number_of_location_samples_500_meters"/>

      <TextView
        android:id="@+id/server_number_of_location_samples_500_meters"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_applicable"/>

    </LinearLayout>

  </LinearLayout>

</RelativeLayout>
